--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-TWIX SERVERS
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Twix Servers</title>
+
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <div id="headerDiv">
+            <br><br>
+            <h1>TWIX</h1>
+            <h2>Servers</h2>
+        </div>
+        <br><br>
+        <div id="comingsoon">COMING SOON</div>
+    </header>
+
+</body>
+</html>
